corrected sidebar on mobile

--- a/css-poc/position/styles.css
+++ b/css-poc/position/styles.css
@@ -36,6 +36,7 @@
   --text-color: #b9b9c2;
   --header-color: #b9b9c2;
   --header-backgroundcolor: rgb(52, 62, 94);
+  --sidebar-backgroundcolor: rgb(38, 46, 70);
   --accent2-color: #CCBB85;
   --accent3-color: #BD2258;
 
@@ -66,7 +67,7 @@ body {
 
 #sidebar {
   color: var(--header-color);
-  background-color: var(--header-backgroundcolor);
+  background-color: var(--sidebar-backgroundcolor);
   width: var(--sidebar-width);
   min-height: 100vh;
   margin-right: 10px;
@@ -115,7 +116,7 @@ body {
 }
 
 #sidebar.sidebar-open {
-  transform: translateX(15rem);
+  transform: translateX(12.5rem);
 }
 
 #sidebarCloseButton {
@@ -140,7 +141,7 @@ body {
 
 .header_layout {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 3em 1fr 3em;
   grid-template-areas: "left center right";
 }
 
@@ -150,16 +151,20 @@ body {
 
 @media (max-width: 768px) {
   .header_left {
+    display: block;
     grid-area: left;
     justify-self: left;
   }
 }
 
 #branding {
+  margin-left: 0.5em;
+
   grid-area: left;
   justify-self: left;
 
   font-family: Krona One;
+  font-size: xx-large;
 
   display: flex;
   flex-direction: row;
@@ -168,13 +173,23 @@ body {
 
 @media (max-width: 768px) {
   #branding {
+    margin-left: -0.5em;
+
     grid-area: center;
     justify-self: center;
+
+    font-size: x-large;
   }
 }
 
 #brandingText {
-  margin-top: 0.175em;
+  margin-top: 0.1em;
+}
+
+@media (max-width: 768px) {
+  #brandingText {
+    margin-top: 0.35em;
+  }
 }
 
 .header_right {
@@ -187,8 +202,14 @@ body {
   margin-top: 0.1em;
 }
 
+@media (max-width: 768px) {
+  #logo {
+    margin-right: 0.6em;
+  }
+}
+
 #avatar {
-  margin-top: 0.38em;
+  margin-top: 0.5em;
   margin-right: 0.5em;
   border-radius: 25px;
 }
